<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#d3dce5"
    android:orientation="vertical" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <TextView
        android:id="@+id/textView1"
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="15dp"
        android:text="What is ROBOTIX ?" />

    <TextView
        android:id="@+id/textView2"
        style="@style/heading2"
        android:lineSpacingMultiplier="1.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/who_are_we" />
    
     <TextView
         android:id="@+id/textView3"
         style="@style/heading1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="5dp"
         android:paddingTop="15dp"
         android:text="About the Organizers ?" />
     
     <TextView
        android:id="@+id/textView4"
        style="@style/heading2"
        android:lineSpacingMultiplier="1.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatdowedo1" />
     <TextView
        android:id="@+id/textView4"
        style="@style/heading2"
        android:lineSpacingMultiplier="1.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatdowedo2" />
     
     <TextView
        android:id="@+id/textView5"
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REACH US"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"/>
     
     <TextView
         android:id="@+id/textView6"
         style="@style/heading2"
         android:lineSpacingMultiplier="1.1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reachus1" />
     <TextView
         android:id="@+id/textView6"
         style="@style/heading2"
         android:lineSpacingMultiplier="1.1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp"
         android:text="@string/reachus2" />
     
</LinearLayout></ScrollView>